--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "metro-cache": "^0.80.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
